--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>Odin Recipes</h1>
     <a href="./recipes/lasagna.html">Lasagna</a>
     <a href="./recipes/pho.html">Pho</a>
+    <a href="./recipes/miso-soup.html">Miso Soup</a>
 </body>
 </html>
